lessons/glm.vapi

/*
The MIT License (MIT)

Copyright (c) <2018> <xna.framework vapi>

Corange definitions used for xna port.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
*/
[Version (since = "0.8.0")] // Corange v0.8.0
[CCode (cprefix = "", lower_case_cprefix = "", cheader_filename = "glm.h")]
namespace glm
{
    /**
     * Not the real glm, but a reasonable fascimile made using c
     */
	
	[SimpleType, CCode (cname = "vec2")]
	public struct vec2 
	{
		[CCode (cname = "x")]
		public float X;
		[CCode (cname = "y")]
		public float Y;

		[CCode (cname = "vec2_new")]
		public vec2 (float x, float y);
		[CCode (cname = "vec2_zero")]
		private static vec2 zero();
		public static vec2 Zero { owned get { return zero();}}
		[CCode (cname = "vec2_one")]
		private static vec2 one();
		// needs ownership or it will reset to zero due to disposal
		public static vec2 One { owned get { return one();}}
		
		[CCode (cname = "vec2_add")]
		public vec2 Add(vec2 other);
		[CCode (cname = "vec2_sub")]
		public vec2 Sub(vec2 other);
		[CCode (cname = "vec2_mul")]
		public vec2 Multiply(float fac);
		[CCode (cname = "vec2_mul_vec2")]
		public vec2 Mul(vec2 other);
		[CCode (cname = "vec2_div")]
		public vec2 Divide(float fac);
		[CCode (cname = "vec2_div_vec2")]
		public vec2 Div(vec2 other);
		[CCode (cname = "vec2_pow")]
		public vec2 Pow(float exp);
		[CCode (cname = "vec2_neg")]
		public vec2 Neg();
		[CCode (cname = "vec2_abs")]
		public vec2 Abs();
		[CCode (cname = "vec2_floor")]
		public vec2 Floor();
		[CCode (cname = "vec2_fmod")]
		public vec2 FMod(float val);
		
		[CCode (cname = "vec2_max")]
		public vec2 Max(float x);
		[CCode (cname = "vec2_min")]
		public vec2 Min(float x);
		[CCode (cname = "vec2_clamp")]
		public vec2 Clamp(float b, float t);
		
		[CCode (cname = "vec2_equ")]
		public bool Equals(vec2 other);
		
		[CCode (cname = "vec2_dot")]
		public float Dot(vec2 other);
		[CCode (cname = "vec2_length_sqrd")]
		public float LengthSquared();
		[CCode (cname = "vec2_length")]
		public float Length();
		[CCode (cname = "vec2_dist_sqrd")]
		public float DistSquared(vec2 other);
		[CCode (cname = "vec2_dist")]
		public float Dist(vec2 other);
		[CCode (cname = "vec2_dist_manhattan")]
		public float DistManhattan(vec2 other);
		[CCode (cname = "vec2_normalize")]
		public vec2 Normalize();
		
		[CCode (cname = "vec2_reflect")]
		public vec2 Reflect(vec2 other);
		
		[CCode (cname = "vec2_from_string")]
		public vec2 Parse(string s);
		[CCode (cname = "vec2_print")]
		public void Print();
		
		[CCode (cname = "vec2_to_array")]
		public void ToArray(ref float result);
		
		[CCode (cname = "vec2_hash")]
		public int GetHashCode();
		[CCode (cname = "vec2_mix_hash")]
		public int MixHash();
		
		[CCode (cname = "vec2_saturate")]
		public vec2 Saturate();
		[CCode (cname = "vec2_lerp")]
		public vec2 Lerp(vec2 other, float amount);
		[CCode (cname = "vec2_smoothstep")]
		public vec2 SmoothStep(vec2 other, float amount);
		[CCode (cname = "vec2_smootherstep")]
		public vec2 SmootherStep(vec2 other, float amount);

		public string to_string()
		{
			return @"{X:$X, Y:$Y}";
		}
		public vec2 Copy()
		{
			return { X, Y };
		}
		public void Clone(vec2 other)
		{
			X = other.X;
			Y = other.Y;
		}
				
	}

	[SimpleType, CCode (cname = "vec3")]
	public struct vec3 
	{
		[CCode (cname = "x")]
		public float X;
		[CCode (cname = "y")]
		public float Y;
		[CCode (cname = "z")]
		public float Z;

		[CCode (cname = "vec3_new")]
		public vec3 (float x, float y, float z);
		[CCode (cname = "vec3_zero")]
		private static vec3 zero();
		public static vec3 Zero { get { return zero();}}
		[CCode (cname = "vec3_one")]
		private static vec3 one();
		public static vec3 One { get { return one();}}
		[CCode (cname = "vec3_up")]
		private static vec3 up();
		public static vec3 Up { get { return up();}}
		[CCode (cname = "vec3_red")]
		private static vec3 red();
		public static vec3 Red { get { return red();}}
		[CCode (cname = "vec3_green")]
		private static vec3 green();
		public static vec3 Green { get { return green();}}
		[CCode (cname = "vec3_blue")]
		private static vec3 blue();
		public static vec3 Blue { get { return blue();}}
		[CCode (cname = "vec3_white")]
		private static vec3 white();
		public static vec3 White { get { return white();}}
		[CCode (cname = "vec3_black")]
		private static vec3 black();
		public static vec3 Black { get { return black();}}
		[CCode (cname = "vec3_grey")]
		private static vec3 grey();
		public static vec3 Grey { get { return grey();}}
		[CCode (cname = "vec3_light_grey")]
		private static vec3 lightGrey();
		public static vec3 LightGrey { get { return lightGrey();}}
		[CCode (cname = "vec3_dark_grey")]
		private static vec3 darkGrey();
		public static vec3 DarkGrey { get { return darkGrey();}}
		
		[CCode (cname = "vec3_add")]
		public vec3 Add(vec3 other);
		[CCode (cname = "vec3_sub")]
		public vec3 Sub(vec3 other);
		[CCode (cname = "vec3_mul")]
		public vec3 Multiply(float fac);
		[CCode (cname = "vec3_mul_vec3")]
		public vec3 MulVec3(vec3 other);
		[CCode (cname = "vec3_div")]
		public vec3 Divide(float fac);
		[CCode (cname = "vec3_div_vec3")]
		public vec3 DivVec3(vec3 other);
		[CCode (cname = "vec3_pow")]
		public vec3 Pow(float fac);
		[CCode (cname = "vec3_neg")]
		public vec3 Neg();
		[CCode (cname = "vec3_abs")]
		public vec3 Abs();
		[CCode (cname = "vec3_floor")]
		public vec3 Floor();
		[CCode (cname = "vec3_fmod")]
		public vec3 FMod(float val);
		
		[CCode (cname = "vec3_equ")]
		public bool Equals(vec3 other);
		[CCode (cname = "vec3_neq")]
		public bool NotEquals(vec3 other);
		
		[CCode (cname = "vec3_dot")]
		public float Dot(vec3 other);
		[CCode (cname = "vec3_length_sqrd")]
		public float LengthSquared();
		[CCode (cname = "vec3_length")]
		public float Length();
		[CCode (cname = "vec3_dist_sqrd")]
		public float DistSquared(vec3 other);
		[CCode (cname = "vec3_dist")]
		public float Dist(vec3 other);
		[CCode (cname = "vec3_dist_manhattan")]
		public float DistManhattan(vec3 other);
		[CCode (cname = "vec3_cross")]
		public vec3 Cross(vec3 other);
		[CCode (cname = "vec3_normalize")]
		public vec3 Normalize();
		
		[CCode (cname = "vec3_reflect")]
		public vec3 Reflect(vec3 other);
		[CCode (cname = "vec3_project")]
		public vec3 Project(vec3 other);
		
		[CCode (cname = "vec3_from_string")]
		public vec3 Parse(string s);
		[CCode (cname = "vec3_print")]
		public void Print();
		
		[CCode (cname = "vec3_to_array")]
		public void ToArray(ref float result);
		
		[CCode (cname = "vec3_hash")]
		public int GetHashCode();
		
		[CCode (cname = "vec3_saturate")]
		public vec3 Saturate();
		[CCode (cname = "vec3_lerp")]
		public vec3 Lerp(vec3 other, float amount);
		[CCode (cname = "vec3_smoothstep")]
		public vec3 SmoothStep(vec3 other, float amount);
		[CCode (cname = "vec3_smootherstep")]
		public vec3 SmootherStep(vec3 other, float amount);

		public string to_string()
		{
			return @"{X:$X, Y:$Y, Z:$Z}";
		}
				
	}

	[SimpleType, CCode (cname = "vec4")]
	public struct vec4 
	{
		[CCode (cname = "x")]
		public float X;
		[CCode (cname = "y")]
		public float Y;
		[CCode (cname = "z")]
		public float Z;
		[CCode (cname = "w")]
		public float W;

		[CCode (cname = "vec4_new")]
		public vec4 (float x, float y, float z, float w);
		[CCode (cname = "vec4_zero")]
		public static vec4 Zero();
		[CCode (cname = "vec4_one")]
		public static vec4 one();
		[CCode (cname = "vec4_red")]
		public static vec4 Red();
		[CCode (cname = "vec4_green")]
		public static vec4 Green();
		[CCode (cname = "vec4_blue")]
		public static vec4 Blue();
		[CCode (cname = "vec4_white")]
		public static vec4 White();
		[CCode (cname = "vec4_black")]
		public static vec4 Black();
		[CCode (cname = "vec4_grey")]
		public static vec4 Grey();
		[CCode (cname = "vec4_light_grey")]
		public static vec4 LightGrey();
		[CCode (cname = "vec4_dark_grey")]
		public static vec4 DarkGrey();
		
		[CCode (cname = "vec4_add")]
		public vec4 Add(vec4 v2);
		[CCode (cname = "vec4_sub")]
		public vec4 Sub(vec4 v2);
		[CCode (cname = "vec4_mul")]
		public vec4 Multiply(float fac);
		[CCode (cname = "vec4_mul_vec4")]
		public vec4 MulVec4(vec4 v2);
		[CCode (cname = "vec4_div")]
		public vec4 Divide(float fac);
		[CCode (cname = "vec4_pow")]
		public vec4 Pow(float fac);
		[CCode (cname = "vec4_neg")]
		public vec4 Neg();
		[CCode (cname = "vec4_abs")]
		public vec4 Abs();
		[CCode (cname = "vec4_floor")]
		public vec4 Floor();
		[CCode (cname = "vec4_fmod")]
		public vec4 FMod(float val);
		[CCode (cname = "vec4_sqrt")]
		public vec4 Sqrt();
		
		[CCode (cname = "vec4_max")]
		public vec4 Max(vec4 v2);
		[CCode (cname = "vec4_min")]
		public vec4 Min(vec4 v2);
		[CCode (cname = "vec4_equ")]
		public bool Equals(vec4 v2);
		
		[CCode (cname = "vec4_dot")]
		public float Dot(vec4 v2);
		[CCode (cname = "vec4_length_sqrd")]
		public float LengthSquared();
		[CCode (cname = "vec4_length")]
		public float Length();
		[CCode (cname = "vec4_dist_sqrd")]
		public float DistSquared(vec4 v2);
		[CCode (cname = "vec4_dist")]
		public float Dist(vec4 v2);
		[CCode (cname = "vec4_dist_manhattan")]
		public float DistManhattan(vec4 v2);
		[CCode (cname = "vec4_normalize")]
		public vec4 Normalize();
		
		[CCode (cname = "vec4_reflect")]
		public vec4 Reflect(vec4 v2);
		
		[CCode (cname = "vec4_from_string")]
		public vec4 Parse(string s);
		[CCode (cname = "vec4_print")]
		public void Print();
		
		[CCode (cname = "vec4_to_array")]
		public void ToArray(ref float result);
		
		[CCode (cname = "vec3_to_homogeneous")]
		public vec4 ToHomogeneous(vec3 v);
		[CCode (cname = "vec4_from_homogeneous")]
		public vec3 FromHomogeneous();
		
		[CCode (cname = "vec4_hash")]
		public int GetHashCode();
		
		[CCode (cname = "vec4_saturate")]
		public vec4 Saturate();
		[CCode (cname = "vec4_lerp")]
		public vec4 Lerp(vec4 v2, float amount);
		[CCode (cname = "vec4_smoothstep")]
		public vec4 SmoothStep(vec4 v2, float amount);
		[CCode (cname = "vec4_smootherstep")]
		public vec4 SmootherStep(vec4 v2, float amount);
		[CCode (cname = "vec4_nearest_interp")]
		public vec4 NearestInterp(vec4 v2, float amount);
		
		[CCode (cname = "vec4_binearest_interp")]
		public vec4 BinearestInterp(vec4 top_left, vec4 top_right, vec4 bottom_left, vec4 bottom_right, float x_amount, float y_amount);
		[CCode (cname = "vec4_bilinear_interp")]
		public vec4 BilinearInterp(vec4 top_left, vec4 top_right, vec4 bottom_left, vec4 bottom_right, float x_amount, float y_amount);
	}
		
	[SimpleType, CCode (cname = "quat")]
	public struct quat 
	{
		[CCode (cname = "x")]
		public float X;
		[CCode (cname = "y")]
		public float Y;
		[CCode (cname = "z")]
		public float Z;
		[CCode (cname = "w")]
		public float W;
